--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <script src="js/jquery.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
         <script src="js/scrollReveal.min.js"></script>
+        <script src="js/superfish.min.js"></script>
         <script src="js/jquery.fullPage.min.js"></script>
         <script src="js/script.js"></script>
 
